2.1.2
- Add Jelly that infuse spell projectiles
- Add 13 more food: pie, skewers, stew, and jelly
- Add patchouli for mechanics, special items, effects, and resources
- Add archwood cabinet

2.1.1
- Fix Enchanter's Knife model
- Fix language and config language

2.1.0
- Add Enchanter's Knife
- Allow Drygmy to farm loot with weapons
- Add unstable cocktail
- Make feasts more expensive by requiring whole meat

2.0.5
- Fix returning double food container
- Fix synchronized shield and wilden effect not being effective

2.0.4
- Fix crash

2.0.3
- Add magic food tag to all foods

2.0.2
- Release 1.21.1