@@ -1,8 +1,10 @@
 2.1.2
+- Fix crash in server
 - Add Jelly that infuse spell projectiles
 - Add 13 more food: pie, skewers, stew, and jelly
 - Add patchouli for mechanics, special items, effects, and resources
 - Add archwood cabinet
+- Fix Enchanter's Knife display on cutting board
 
 2.1.1
 - Fix Enchanter's Knife model
